final final commit

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <section class="womenWardrobe">
       <div class="circlewomen"></div>
-      <img src="images/women.png" alt="" class="womenimg" />
+      <img src="images/women.webp" alt="" class="womenimg" />
 
       <div class="textboxxx">
         <p class="fit">The Right Fit For You</p>
